<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Top Banner -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:text="@string/browse_events_welcome"
        android:textColor="@color/dark_blue_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- List Area (RecyclerView Recommended) -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/events_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp" />

    <!-- Toolbar -->
    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="@style/Widget.Theme.ReleaseTheKraken.ButtonBar.Fullscreen"
        tools:ignore="UselessParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/NotificationLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/notifications_toolbar_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="@color/white"
                android:src="@android:drawable/ic_popup_reminder"
                app:tint="@color/dark_blue_text" />

            <TextView
                android:id="@+id/notifications_toolbar_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications_toolbar"
                android:textAlignment="center"
                android:textColor="@color/dark_blue_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/HomeLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/home_toolbar_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="@color/white"
                android:src="@android:drawable/ic_dialog_alert"
                app:tint="@color/dark_blue_text" />

            <TextView
                android:id="@+id/home_toolbar_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_toolbar"
                android:textAlignment="center"
                android:textColor="@color/dark_blue_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ProfileLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/profile_toolbar_button"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="@color/white"
                android:src="@android:drawable/ic_dialog_alert"
                app:tint="@color/dark_blue_text" />

            <TextView
                android:id="@+id/profile_toolbar_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_toolbar"
                android:textAlignment="center"
                android:textColor="@color/dark_blue_text" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>