<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">


    <ImageView
        android:id="@+id/browse_event_poster_detailed"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/browse_event_title_detailed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/dark_blue_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/browse_event_description_detailed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="10"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/registration_end_text_browse"
            android:textColor="@color/dark_blue_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/browse_event_regclose_detailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/browse_event_waitlist_detailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/current_wait_list_browse"
            android:textColor="@color/dark_blue_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
    </LinearLayout>

    <Button
        android:id="@+id/browse_view_comments_button_detailed"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/view_comments_button" />
</LinearLayout>